syntax = "proto3";

package cinema_service;
option go_package = "cinema_service/v1/protos";
import "google/protobuf/field_mask.proto";

message Timestamp {
  // Time in format RFC3339, time must be in UTC
  // example: 2023-11-10T23:00:00Z
  string formattedTimestamp = 1 [ json_name = "formatted_timestamp" ];
}

message GetMoviesScreeningsRequest {
  int32 cinemaId = 1[json_name="cinema_id"];
  Timestamp startPeriod = 2 [ json_name = "start_period" ];
  Timestamp endPeriod = 3 [ json_name = "end_period" ];
}

message GetMoviesScreeningsInCitiesRequest{
  // cities ids empty, returns all screenings without city id matching, for multiple values use ',' as separator
  optional string citiesIds = 1[json_name="cities_ids"];
  Timestamp startPeriod = 2 [ json_name = "start_period" ];
  Timestamp endPeriod = 3 [ json_name = "end_period" ];
}

message Price {
  // The price value in minimum currency units, for example 10010, is 100$ and 10 penny
  int32 value = 1;
}


message PreviewScreening {
  int32 movieID = 1 [ json_name = "movie_id" ];
  repeated string screeningsTypes = 2 [ json_name = "screenings_types" ];
  repeated string hallsTypes = 3 [ json_name = "halls_types" ];
}

// Unique set of cinema screenings (unique by movie_id)
message PreviewScreenings { repeated PreviewScreening screenings = 1; }

message GetScreeningsRequest {
  int32 cinemaId = 1[json_name="cinema_id"];
  int32 movieID = 2 [ json_name = "movie_id" ];
  Timestamp startPeriod = 3 [ json_name = "start_period" ];
  Timestamp endPeriod = 4 [ json_name = "end_period" ];
}

message Screening {
  int64 screeningID = 1 [ json_name = "screening_id" ];
  int32 MovieID = 2 [ json_name = "movie_id" ];
  string screeningType = 3 [ json_name = "screening_type" ];
  Timestamp startTime = 4 [ json_name = "start_time" ];
  int32 hallID = 5 [ json_name = "hall_id" ];
  Price ticketPrice = 6 [ json_name = "ticket_price" ];
}

message Screenings { repeated Screening screenings = 1; }

message GetCinemasInCityRequest { int32 cityId = 1[json_name="city_id"]; }

message Coordinates {
  double latityde = 1;
  double longitude = 2;
}

message Cinema {
  int32 cinemaID = 1 [ json_name = "cinema_id" ];
  string name = 2;
  string address = 3;
  Coordinates coordinates = 4;
}

message Cinemas { repeated Cinema cinemas = 1; }

message City {
  int32 cityID = 1 [ json_name = "city_id" ];
  string name = 2;
}

message Cities { repeated City cities = 1; }

message Hall {
  int32 hallID = 1 [ json_name = "hall_id" ];
  uint32 hallSize = 2 [ json_name = "hall_size" ];
  string name = 3;
  string type = 4;
}

message Halls { repeated Hall halls = 1; }
message GetCinemaRequest {
  int32 cinemaId = 1;
}

message GetScreeningsInCityRequest {
  int32 cityId =1[json_name="city_id"];
  int32 movieId = 2[json_name="movie_id"]; 
  Timestamp startPeriod = 3 [ json_name = "start_period" ];
  Timestamp endPeriod = 4 [ json_name = "end_period" ];
}

message CityScreening {
  int64 screeningId = 1 [ json_name = "screening_id" ];
  int32  cinema_id = 2 [ json_name = "cinema_id" ];
  string screeningType = 3 [ json_name = "screening_type" ];
  Timestamp startTime = 4 [ json_name = "start_time" ];
  int32 hallID = 5 [ json_name = "hall_id" ];
  Price ticketPrice = 6 [ json_name = "ticket_price" ];
}

message CityScreenings {
  repeated CityScreening screenings = 1;
}

message GetHallsRequest {
  // for multiple values use ',' separator
  string hallsIds = 1 [ json_name = "halls_ids" ]; 
}

message GetHallConfigurationRequest { int32 hallId = 1[json_name="hall_id"]; }


message Place {
  int32 row = 1;
  int32 seat = 2;
  float grid_pos_x = 3;
  float grid_pos_y = 4;
}

message GetScreeningRequest {
  int64 screeningId = 1[json_name="screening_id"];
    // Fields to return, valid array values is GetScreeningResponse fields names, leave it empty if you want get all fields
    google.protobuf.FieldMask mask = 2;
}

message GetScreeningResponse {
  int32 cinema_id = 1[json_name="cinema_id"];
  int32 movie_id = 2 [ json_name = "movie_id" ];
  string screening_type = 3 [ json_name = "screening_type" ];
  Timestamp start_time = 4 [ json_name = "start_time" ];
  int32 hall_id = 5 [ json_name = "hall_id" ];
  Price ticket_price = 6 [ json_name = "ticket_price" ];
  HallConfiguration hall_configuration = 7[json_name="hall_configuration"];
}

message HallConfiguration { repeated Place place = 1; }

message GetCinemaHalls {
  int32 CinemaId = 1[json_name="cinema_id"];
}